array.island.Island.scala.error
Compilation error:
Island:20: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    match position
    ^Island:21: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    case i if (i<x && num(i)>actuel) => islandRecursif(nume,x,(compteur+1),num(i),(i+1))
    ^Island:22: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    case i if (i<x && num(i)<actuel) => islandRecursif(nume,x,compteur,num(i),(i+1))
    ^Island:23: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    case i if  i>x => return compteur
    ^